--- a/CHSZiK/src/app/main/pages/header/header.component.html
+++ b/CHSZiK/src/app/main/pages/header/header.component.html
@@ -3,19 +3,19 @@
     <img class="logo" src="../../../../assets/img/logo.png" alt="" />
     <div class="nav">
       <div class="nav-item">
-        <a href="">Панель администратора</a>
+        <a mat-raised-button href="">Панель администратора</a>
       </div>
       <div class="nav-item">
-        <a href="/list-of-location/0">Локации</a>
+        <a mat-raised-button href="/list-of-location/0">Локации</a>
       </div>
       <div class="nav-item">
-        <a href="/list-of-equipment">Просмотр всего оборудования</a>
+        <a mat-raised-button href="/list-of-equipment">Просмотр всего оборудования</a>
       </div>
       <div class="nav-item">
-        <a href="">Планы работ по обслуживанию</a>
+        <a mat-raised-button href="">Планы работ по обслуживанию</a>
       </div>
       <div class="nav-item">
-        <a href="">Список запчастей на складе</a>
+        <a mat-raised-button href="">Список запчастей на складе</a>
       </div>
     </div>
     <div class="profil">
@@ -25,3 +25,4 @@
     </div>
   </div>
 </body>
+
