--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/modal-position/modal-position.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/modal-position/modal-position.component.html
@@ -2,10 +2,8 @@
   <div class="content">
     <div class="content__control-btn">
       <div></div>
-      <button class="content__button-control"
-              (click)="btnCloseModal()"><img class="content__img-control"
-                                             src="../../../../../../assets/img/close.png"
-                                             alt=""></button>
+      <button mat-raised-button color="accent" matTooltip="Закрыть" class="content__button-control"
+              (click)="btnCloseModal()"><mat-icon>close</mat-icon></button>
     </div>
 
     <ng-container>
@@ -17,20 +15,28 @@
 
 
 <ng-template #position>
-  <p>Позиции</p>
+  <p class="content__name">Позиции</p>
   <div class="item-list" *ngFor="let position of positionsArr">
     <div class="item-list__flex">
       <div class="item-list__item">{{position.position}}</div>
-      <img *ngIf="position.group_id" (click)="deletePosition(position.group_id)" class="item-list__img-delete"
-           src="../../../../../../../../assets/img/delete.png" alt="">
+      <mat-icon *ngIf="position.group_id" (click)="deletePosition(position.group_id)" matTooltip="Удалить" class="item-list__img-delete">delete</mat-icon>
+<!--      <img *ngIf="position.group_id" (click)="deletePosition(position.group_id)" class="item-list__img-delete"-->
+<!--           src="../../../../../../../../assets/img/delete.png" alt="">-->
     </div>
   </div>
   <form [formGroup]="addingPositionForm" class="item-list__create">
-    <input formControlName="position" class="item-list__input" type="text" placeholder="название">
-    <button (click)="addingNewPosition()"
-            [disabled]="addingPositionForm.invalid" class="item-list__button"><img class="item-list__img"
-                                                                                   src="../../../../../../../../assets/img/apply.png"
-                                                                                   alt=""></button>
+<!--    <input formControlName="position" class="item-list__input" type="text" placeholder="название">-->
+    <mat-form-field class="example-full-width">
+      <mat-label>Наименование</mat-label>
+      <input type="text" formControlName="position" matInput placeholder="Введите наименование">
+    </mat-form-field>
+    <button [disabled]="addingPositionForm.invalid" (click)="addingNewPosition()" matTooltip="Создать" class="item-list__button" mat-fab color="accent">
+      <mat-icon class="size-icon">done</mat-icon>
+    </button>
+<!--    <button (click)="addingNewPosition()"-->
+<!--            [disabled]="addingPositionForm.invalid" class="item-list__button"><img class="item-list__img"-->
+<!--                                                                                   src="../../../../../../../../assets/img/apply.png"-->
+<!--                                                                                   alt=""></button>-->
   </form>
 </ng-template>
 
