--- a/CHSZiK/src/app/main/pages/header/header.component.scss
+++ b/CHSZiK/src/app/main/pages/header/header.component.scss
@@ -3,6 +3,12 @@
   margin: 0;
 }
 
+body {
+  font-weight: 400;
+  font-size: 16px;
+  background-color: #f5f5f5;
+}
+
 button img {
   height: 70px;
   width: 70px;
@@ -20,9 +26,6 @@ button img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.nav-item :hover{
-  background-color: gray;
 }
 
 .nav {
