--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.scss
@@ -16,10 +16,11 @@
   justify-content: space-around;
 }
 .checkbox {
-  background-color: #d9d9d9;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
   width: 270px;
-  height: 30px;
-  border-radius: 25px;
+  height: 40px;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -33,9 +34,10 @@
 .wrapper {
   background-color: white;
   width: 610px;
-  height: 115px;
   margin: 0 auto;
   border-radius: 5px;
+  padding-bottom: 14px;
+
 }
 .name-component {
   display: flex;
@@ -46,6 +48,19 @@
   height: 50px;
   justify-content: space-around;
 }
+
+.example-full-width {
+  border-radius: 5px;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  width: 480px;
+  height: 45px;
+}
+
+
+.example-full-width_50px {
+  width: 45px;
+}
+
 .number-component {
   font-size: 16px;
   width: 45px;
@@ -60,30 +75,15 @@
 .btn-save-component {
   width: 45px;
   height: 45px;
-  border-radius: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
-  transition: 0.15s linear;
 
-  .img-apply {
-    width: 35px;
-    height: 35px;
+  .size-icon {
+    font-size: 32px;
+    width: auto;
+    height: auto;
   }
-}
-
-button:hover {
-  font-size: 17px;
-  transition: 0.15s linear;
-  background: #A49343;
-  border: 3px solid #E3B800;
-}
-button:active {
-  font-size: 16px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
 }
 
 .input-name-component {
