--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/layout/setting-component.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/layout/setting-component.component.scss
@@ -17,10 +17,11 @@
 }
 
 .btn button {
-  background-color: #d9d9d9;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
   width: 270px;
-  height: 30px;
-  border-radius: 25px;
+  height: 40px;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -34,6 +35,18 @@
 
 }
 
+.border {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
+  cursor: pointer;
+  width: 45px;
+  height: 45px;
+}
+
 .setting-component__img {
   height: 40px;
   width: 40px;
@@ -41,6 +54,7 @@
 }
 
 .wrapper {
+  box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, .5);
   background-color: white;
   width: 610px;
   margin: 0 auto;
@@ -50,23 +64,25 @@
 }
 
 .name-component {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   display: flex;
-  background-color: #d9d9d9;
-  border-radius: 25px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
   align-items: center;
   width: 480px;
-  height: 50px;
+  height: 45px;
   justify-content: space-around;
 }
 
 .number-component {
-  background-color: #d9d9d9;
-  width: 50px;
-  height: 50px;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
+  width: 45px;
+  height: 45px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 25px;
+  border-radius: 5px;
 }
 
 .input-name-component {
@@ -82,22 +98,17 @@
   justify-content: center;
 }
 
-
-//
-
 .btn-delete__component {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   margin: 0 auto;
-  align-items: center;
   margin-top: 8px;
   width: 200px;
-  height: 30px;
+  height: 40px;
   border-radius: 5px;
   font-size: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
 }
 
 .number-component__update {
@@ -113,17 +124,27 @@
 
 .name-component__update {
   display: flex;
-  background-color: #d9d9d9;
   border-radius: 25px;
   align-items: center;
   width: 480px;
-  height: 50px;
+  height: 45px;
   justify-content: space-around;
+}
+
+.example-full-width {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  width: 480px;
+  height: 45px;
+  border-radius: 5px;
+}
+
+.example-full-width_50px {
+  width: 45px;
 }
 
 .input-name-component__update {
   width: 300px;
-  height: 30px;
+  height: 45px;
   border-radius: 5px;
   margin-right: 10px;
 }
@@ -131,17 +152,14 @@
 .btn-save-component__update {
   width: 45px;
   height: 45px;
-  border-radius: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
-
-  .img-apply {
-    width: 35px;
-    height: 35px;
-  }
+}
+.size-icon {
+  font-size: 32px;
+  width: auto;
+  height: auto;
 }
 
 .upgrade-setting-component__checkboxs {
@@ -151,10 +169,11 @@
 }
 
 .upgrade-checkbox {
-  background-color: #d9d9d9;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
   width: 270px;
-  height: 30px;
-  border-radius: 25px;
+  height: 40px;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -163,19 +182,4 @@
 .upgrade-checkbox input {
   height: 20px;
   width: 20px;
-}
-
-button {
-  transition: 0.15s linear;
-}
-button:hover {
-  font-size: 17px;
-  transition: 0.15s linear;
-  background: #A49343;
-  border: 3px solid #E3B800;
-}
-button:active {
-  font-size: 16px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
 }
