--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -17,28 +17,24 @@
   align-items: center;
 }
 
-.img-change {
-  cursor: pointer;
-  margin-left: 5px;
-  width: 40px;
-  height: 40px;
+.loading {
+  top: 150px;
+  margin: 0 auto;
 }
 
 .btn-back {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   width: 133px;
   height: 55px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  font-size: 16px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
   border-radius: 5px;
 
-
-  .img-back {
-    width: 50px;
-    height: 50px;
+  .size-icon {
+    font-size: 32px;
+    width: auto;
+    height: auto;
   }
 }
 
@@ -74,16 +70,20 @@ input.active {
 }
 
 .btn__img-change {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   margin-top: 10px;
-  width: 180px;
-  height: 42px;
+  width: 200px;
+  height: 45px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-size: 16px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
   border-radius: 5px;
+
+  .size-icon {
+    font-size: 32px;
+    width: auto;
+    height: auto;
+  }
 }
 
 .adding-img-model__btn{
@@ -94,20 +94,8 @@ input.active {
   background-color: #E3B800;
   border-radius: 25px;
   justify-self: start;
-  transition: 0.15s linear;
 }
 
-button:hover {
-  font-size: 17px;
-  transition: 0.15s linear;
-  background: #A49343;
-  border: 3px solid #E3B800;
-}
-button:active {
-  font-size: 16px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
-}
 
 .img-model {
   border-radius: 5px;
@@ -118,7 +106,9 @@ button:active {
 .adding-component {
   width: 650px;
   background-color: rgba(164, 147, 67, 0.5);
-  border-radius: 25px;
+  border-radius: 5px;
+  height: 850px;
+  overflow: auto;
 }
 
 .adding-component__content {
@@ -126,12 +116,35 @@ button:active {
   margin-bottom: 10px;
 }
 .head__name {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
   font-size: 32px;
   text-align: center;
   border-radius: 5px;
   margin: 0 auto;
-  background-color: #d9d9d9;
+  padding: 5px;
 }
+
+.example-full-width {
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  width: 460px;
+  height: 45px;
+  border-radius: 5px;
+}
+
+.border {
+  margin-left: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
+  cursor: pointer;
+  width: 45px;
+  height: 45px;
+}
+
 .input {
   width: 460px;
   height: 40px;
@@ -144,14 +157,9 @@ button:active {
 //}
 
 .head-name {
-  align-items: stretch;
+  align-items: center;
   display: flex;
   justify-self: center;
-}
-
-.input {
-  background-color: white;
-  font-size: 16px;
 }
 
 .save {
@@ -162,12 +170,11 @@ button:active {
 }
 
 .save__btn{
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   width: 230px;
   height: 50px;
   border: none;
   font-size: 16px;
-  background-color: #E3B800;
-  border: 3px solid #A49343;
   border-radius: 25px;
 }
 .pfd-container {
@@ -184,5 +191,11 @@ pdf-viewer {
   filter: drop-shadow(5px 5px 5px #222222);
   border-radius: 5px;
   border: 1px solid black;
+}
+
+.size-icon {
+  font-size: 32px;
+  width: auto;
+  height: auto;
 }
 
