--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.html
@@ -1,4 +1,10 @@
 <div class="item">
+  <button mat-raised-button color="accent" class="menu" matTooltip="Опции" [matMenuTriggerFor]="menu"><mat-icon class="icon-size">list</mat-icon></button>
+  <mat-menu class="column" #menu="matMenu">
+    <button mat-raised-button color="accent" (click)="openSettings()" class="setting">Редактировать</button>
+    <button mat-raised-button color="accent" (click)="openPositionModal()" class="setting">Позиции</button>
+    <button mat-raised-button color="warn" (click)="deleteModel()" class="setting">Удалить</button>
+  </mat-menu>
   <div class="image-model-equipment">
     <img [src]="models.image_plan_reference" alt="" *ngIf="pdfStrModel != true">
     <div class="container" *ngIf="pdfStrModel">
@@ -7,12 +13,7 @@
       ></pdf-viewer>
     </div>
   </div>
-  <div class="name-model-equipment">
-    <span>Название: {{models.equipment_name}} </span>
-  </div>
-  <div class="btn">
-    <button (click)="openSettings()" class="setting">Редактировать</button>
-    <button (click)="openPositionModal()" class="setting">Позиции</button>
-    <button (click)="deleteModel()" class="setting">Удалить</button>
+  <div matTooltip="Наименование модели" class="name-model-equipment">
+    <span>{{models.equipment_name}} </span>
   </div>
 </div>
