--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.scss
@@ -17,8 +17,8 @@
   width: 300px;
   height: 300px;
   border-radius: 5px;
-  border: 1px solid black;
-  margin-top: 10px;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  margin-top: 5px;
 }
 
 .btn {
@@ -28,12 +28,33 @@
 }
 
 .setting {
-  border-radius: 5px;
-  font-size: 16px;
+  box-shadow: 0 0 5px 2px rgba(221, 221, 221, 1);
+  margin: 5px;
+}
+
+.menu {
+  align-self: end;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 1px 1px rgba(221, 221, 221, 1);
   margin-top: 5px;
-  margin-bottom: 5px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
+  width: 100px;
+  height: 20px;
+
+  .icon-size {
+    width: auto;
+    height: auto;
+    font-size: 30px;
+    margin: 0 auto;
+  }
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .name-model-equipment {
@@ -41,17 +62,21 @@
   padding-bottom: 5px;
   padding-top: 5px;
   margin-top: 10px;
+  margin-bottom: 10px;
   width: 300px;
-  background-color: #D9D9D9;
-  border: 1px solid #000000;
+  box-shadow: 3px 3px 3px 3px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
   border-radius: 5px
 }
 //////////
 
-.container {
+.image-model-equipment .container {
   width: 300px;
   height: 300px;
   margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 pdf-viewer {
@@ -60,19 +85,8 @@ pdf-viewer {
   display: flex;
   align-items: center;
   justify-content: center;
-  filter: drop-shadow(5px 5px 5px #222222);
+  //filter: drop-shadow(5px 5px 5px #222222);
+  box-shadow: 3px 3px 3px 3px rgba(221, 221, 221, 1);
   border-radius: 5px;
-  border: 1px solid black;
 }
-button {
-  transition: 0.15s linear;
-}
-button:hover {
-  transition: 0.15s linear;
-  background: #A49343;
-  border: 3px solid #E3B800;
-}
-button:active {
-  border: 3px solid #A49343;
-  background-color: #E3B800;
-}
+
