--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-item/location-item.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-item/location-item.component.scss
@@ -3,6 +3,25 @@
   padding: 0;
 }
 
+.border {
+  margin-left: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 3px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
+  cursor: pointer;
+  width: 35px;
+  height: 35px;
+}
+
+.size-icon {
+  font-size: 32px;
+  width: auto;
+  height: auto;
+}
+
 .item-list__item {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -16,19 +35,17 @@
   background-color: #FFFFFF;
   border-radius: 5px;
 
-  .item-list__input {
+  .example-full-width {
     margin-top: 10px;
     width: 260px;
-    height: 40px;
-    border: 1px solid #000000;
+    height: 45px;
     font-size: 16px;
     border-radius: 5px;
     margin-bottom: 10px;
   }
 
   .item-list__button-delete {
-    border: 3px solid #A49343;
-    background-color: #E3B800;
+    box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
     display: flex;
     font-size: 16px;
     align-items: center;
@@ -39,21 +56,6 @@
     margin-bottom: 5px;
   }
 
-  button {
-    transition: 0.15s linear;
-  }
-  button:hover {
-    font-size: 17px;
-    transition: 0.15s linear;
-    background: #A49343;
-    border: 3px solid #E3B800;
-  }
-  button:active {
-    font-size: 16px;
-    border: 3px solid #A49343;
-    background-color: #E3B800;
-  }
-
   .item-list__button-apply {
     margin-left: 5px;
     width: 40px;
@@ -62,13 +64,6 @@
     align-items: center;
     justify-content: center;
     border-radius: 50px;
-    border: 3px solid #A49343;
-    background-color: #E3B800;
-
-    .item-list__img {
-      width: 40px;
-      height: 40px;
-    }
   }
 
   .item-list__img-change {
@@ -85,8 +80,8 @@
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 5px;
-    background-color: #D9D9D9;
-    border: 1px solid #000000;
+    background-color: #f5f5f5;
+    box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
     font-size: 16px;
     border-radius: 5px;
     margin-bottom: 10px;
@@ -96,19 +91,6 @@
 .flex {
   display: flex;
   align-items: center;
-
-  button {
-    transition: 0.15s linear;
-  }
-  button:hover {
-    transition: 0.15s linear;
-    background: #A49343;
-    border: 3px solid #E3B800;
-  }
-  button:active {
-    border: 3px solid #A49343;
-    background-color: #E3B800;
-  }
 }
 
 
