--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/location-page-item/location-page-item.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/location-page-item/location-page-item.component.html
@@ -1,4 +1,8 @@
 <div class="item">
+  <button mat-raised-button color="accent" class="menu" matTooltip="Опции" [matMenuTriggerFor]="menu"><mat-icon class="icon-size">list</mat-icon></button>
+  <mat-menu class="column" #menu="matMenu">
+    <button mat-raised-button color="warn" (click)="btnDelete(position.id)" class="setting">Удалить</button>
+  </mat-menu>
   <div class="image-model-equipment">
     <img [src]="position.image" alt="" *ngIf="pdfStrModel != true">
     <div class="container" *ngIf="pdfStrModel">
@@ -7,11 +11,11 @@
       ></pdf-viewer>
     </div>
   </div>
-  <div class="name-model-equipment">
-    <span>Название: {{position.equipment_name}} </span>
-    <span>Позиция: {{position.position}} </span>
+  <div matTooltip="Наименование модели" class="name-model-equipment">
+    <span>{{position.equipment_name}}</span>
   </div>
-  <div class="btn">
-    <button class="setting" (click)="btnDelete(position.id)" >Удалить</button>
+  <div matTooltip="Позиция" class="name-model-equipment mt5px">
+    <span>{{position.position}}</span>
   </div>
 </div>
+
