--- a/CHSZiK/src/app/main/pages/list-of-location/layout/list-of-location.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/layout/list-of-location.component.scss
@@ -15,6 +15,10 @@
   align-items: center;
 }
 .head__header {
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+  background-color: #f5f5f5;
   font-size: 32px;
 }
 
@@ -22,18 +26,10 @@
   width: 133px;
   height: 55px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   font-size: 16px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
-  border-radius: 5px;
-
-
-  .img-back {
-    width: 50px;
-    height: 50px;
-  }
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
 }
 
 .head__btn-adding{
@@ -42,34 +38,20 @@
   height: 50px;
   width: 270px;
   border-radius: 25px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
-  transition: 0.15s linear;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
 }
 
-button:hover {
-  font-size: 17px;
-  transition: 0.15s linear;
-  background: #A49343;
-  border: 3px solid #E3B800;
-}
-button:active {
-  font-size: 16px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
+.loading {
+  top: 150px;
+  margin: 0 auto;
 }
 
 .container {
   margin-top: 15px;
   width: 1440px;
   background: rgba(164, 147, 67, 0.5);
-  border-radius: 25px;
+  border-radius: 5px;
   margin-bottom: 15px;
-
-  .loading {
-    font-size: 32px;
-    margin: 0 auto;
-  }
 
   .item-list {
     //justify-content: center;
