--- a/CHSZiK/src/app/sign-in/layout/sign-in.component.html
+++ b/CHSZiK/src/app/sign-in/layout/sign-in.component.html
@@ -3,21 +3,17 @@
     <img src="../../../assets/img/logo.png" alt="logo"/>
   </div>
   <div class="title">Авторизация</div>
-  <button class="authorization-button">Войти<Br/>по штрих-коду</button>
+  <button class="authorization-button" mat-raised-button color="accent">Войти<Br/>по штрих-коду</button>
   <span class="text">Или</span>
   <form [formGroup]="authForm" (ngSubmit)="submitAuth()">
-    <input
-      formControlName="login"
-      type="login"
-      class="authorization-input"
-      placeholder="Введите логин"
-    />
-    <input
-      formControlName="password"
-      type="password"
-      class="authorization-input"
-      placeholder="Введите пароль"
-    />
-    <button class="authorization-button" type="submit">Вход</button>
+    <mat-form-field class="example-full-width">
+      <mat-label>Логин</mat-label>
+      <input formControlName="login" type="login" matInput placeholder="Введите логин">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <mat-label>Пароль</mat-label>
+      <input type="password" formControlName="password" matInput placeholder="Введите пароль">
+    </mat-form-field>
+    <button [disabled]="authForm.invalid" class="authorization-button" mat-raised-button color="accent" type="submit">Вход</button>
   </form>
 </div>
