--- a/CHSZiK/src/app/sign-in/layout/sign-in.component.scss
+++ b/CHSZiK/src/app/sign-in/layout/sign-in.component.scss
@@ -37,54 +37,15 @@ span {
   display: block;
   width: 335px;
   height: 80px;
-
-  background: #e3b800;
-  border: 3px solid #a49343;
   border-radius: 25px;
-
   font-weight: 400;
   font-size: 32px;
   line-height: 39px;
-
-  transition: 0.15s linear;
+  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
 }
 
-.authorization-input {
-  text-align: center;
-
+.example-full-width {
   margin-top: 40px;
-
-  display: block;
-
   width: 480px;
   height: 59px;
-
-  background: #ffffff;
-  border: 3px solid #a49343;
-  border-radius: 5px;
-
-  font-weight: 100;
-  font-size: 20px;
-  line-height: 39px;
-}
-
-.authorization-button:hover {
-  background-color: #a49343;
-  cursor: pointer;
-  transition: 0.2s;
-  -webkit-transition: 0.2s;
-  -moz-transition: 0.2s;
-  -ms-transition: 0.2s;
-  -o-transition: 0.2s;
-}
-button:hover {
-  font-size: 33px;
-  transition: 0.15s linear;
-  background: #A49343;
-  border: 3px solid #E3B800;
-}
-button:active {
-  font-size: 32px;
-  border: 3px solid #A49343;
-  background-color: #E3B800;
 }
