--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.html
@@ -3,7 +3,9 @@
   <div class="wrapper">
     <div class="head">
       <button mat-raised-button color="accent" class="btn-back" (click)="btnBack()"><mat-icon>arrow_back_ios</mat-icon>Назад</button>
-      <div class="head__header" *ngIf="parentLocation">{{parentLocation.name_location}}</div>
+      <div class="head__header">
+        <span class="head__header-name" *ngIf="parentLocation">{{parentLocation.name_location}}</span>
+      </div>
       <div class="head__btns">
         <button (click)="openLocation()" mat-raised-button color="accent" class="head__btn">Разбить локацию</button>
         <button class="head__btn" mat-raised-button color="accent" (click)="openModalWindowAddingModel()">Добавить оборудование</button>
