--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-item/location-item.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-item/location-item.component.scss
@@ -23,10 +23,7 @@
 }
 
 .item-list__item {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -66,17 +63,9 @@
     border-radius: 50px;
   }
 
-  .item-list__img-change {
-    cursor: pointer;
-    margin-left: 5px;
-    width: 40px;
-    height: 40px;
-  }
-
   .item-list__item-name {
     margin-top: 10px;
     width: 260px;
-    //height: 40px;
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 5px;
