--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.scss
@@ -9,12 +9,19 @@
   margin: 0 auto;
   padding-bottom: 15px;
 }
+
 .head {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 33% 34% 33%;
+  justify-content: center;
   align-items: center;
+
+  .head__header {
+    margin: 0 auto;
+  }
 }
-.head__header {
+
+.head__header-name {
   padding: 5px;
   border-radius: 5px;
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
@@ -23,6 +30,7 @@
 }
 
 .head__btns {
+  justify-content: end;
   display: flex;
   align-items: center;
 }
@@ -69,37 +77,14 @@
     margin: 0 auto;
 
     .item-list__item {
-      margin-top: 10px;
-      margin-bottom: 10px;
-      margin-left: 10px;
-      margin-right: 10px;
+      margin: 10px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       width: 320px;
-      background-color: #FFFFFF;
       border-radius: 5px;
       background-color: white;
-
-      .item-list__item-delete {
-        padding-left: 6px;
-        padding-right: 6px;
-        margin-top: 5px;
-        border-radius: 5px;
-        font-size: 16px;
-        margin-bottom: 5px;
-        border: 3px solid #A49343;
-        background-color: #E3B800;
-      }
-
-      .item-list__image-model {
-        margin-top: 10px;
-        width: 300px;
-        height: 300px;
-        border-radius: 5px;
-        border: 1px solid black;
-      }
 
       .item-list__item-name {
         padding-left: 5px;
@@ -111,7 +96,6 @@
         border: 1px solid #000000;
         border-radius: 5px;
       }
-
     }
   }
 }
