--- a/CHSZiK/src/app/main/pages/header/header.component.html
+++ b/CHSZiK/src/app/main/pages/header/header.component.html
@@ -15,7 +15,7 @@
         <a mat-raised-button href="">Планы работ по обслуживанию</a>
       </div>
       <div class="nav-item">
-        <a mat-raised-button href="">Список запчастей на складе</a>
+        <a mat-raised-button href="/warehouse">Список запчастей на складе</a>
       </div>
     </div>
     <div class="profil">
