--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.html
@@ -23,13 +23,14 @@
       <div class="model-img">
         <div class="adding-img-model">
           <input [class.active]="isParentImagePlanReference" #input (change)="onFileUpload($event)" type="file">
-          <img *ngIf="isParentImagePlanReference && pdfStr != true" class="img-model"
+          <img *ngIf="isParentImagePlanReference && pdfStr == false && docx == false" class="img-model"
                [src]="parent.image_plan_reference" alt="">
           <div class="pfd-container" *ngIf="isParentImagePlanReference && pdfStr">
             <pdf-viewer [src]="parent.image_plan_reference"
                         [original-size]="false"
             ></pdf-viewer>
           </div>
+          <div *ngIf="isParentImagePlanReference && docx" class="render" #render></div>
         </div>
         <button mat-raised-button color="accent" (click)="btnUpdateImage()" class="btn__img-change"
                 *ngIf="isParentImagePlanReference">
@@ -52,3 +53,86 @@
     </div>
   </div>
 </div>
+
+
+<!--<mat-spinner *ngIf="loading" class="loading"></mat-spinner>-->
+<!--<div *ngIf="!loading">-->
+<!--  <div class="wrapper" *ngIf="parent || isNew">-->
+<!--    <div class="head">-->
+<!--      <button class="btn-back" mat-raised-button color="accent" (click)="btnBack()">-->
+<!--        <mat-icon>arrow_back_ios</mat-icon>-->
+<!--        Назад-->
+<!--      </button>-->
+<!--      <div *ngIf="!isNew && updateName == false" class="head-name">-->
+<!--        <p class="head__name">{{parent.equipment_name}}</p>-->
+<!--        <div class="border" matTooltip="Редактировать" (click)="btnUpgradeHeadName()">-->
+<!--          <mat-icon class="size-icon">edit</mat-icon>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div [formGroup]="addingNewModelForm">-->
+<!--        <mat-form-field *ngIf="isNew || updateName == true" class="example-full-width">-->
+<!--          <mat-label>Наименование</mat-label>-->
+<!--          <input type="text" formControlName="equipment_name" matInput placeholder="Введите наименование">-->
+<!--        </mat-form-field>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="container">-->
+<!--&lt;!&ndash;      <div class="model-img">&ndash;&gt;-->
+<!--&lt;!&ndash;        <div class="adding-img-model">&ndash;&gt;-->
+<!--&lt;!&ndash;          <input [class.active]="isParentImagePlanReference" #input (change)="onFileUpload($event)" type="file">&ndash;&gt;-->
+<!--&lt;!&ndash;          <img *ngIf="isParentImagePlanReference && pdfStr != true" class="img-model"&ndash;&gt;-->
+<!--&lt;!&ndash;               [src]="parent.image_plan_reference" alt="">&ndash;&gt;-->
+<!--&lt;!&ndash;          <div class="pfd-container" *ngIf="isParentImagePlanReference && pdfStr">&ndash;&gt;-->
+<!--&lt;!&ndash;            <pdf-viewer [src]="parent.image_plan_reference"&ndash;&gt;-->
+<!--&lt;!&ndash;                        [original-size]="false"&ndash;&gt;-->
+<!--&lt;!&ndash;            ></pdf-viewer>&ndash;&gt;-->
+<!--&lt;!&ndash;          </div>&ndash;&gt;-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;        <button mat-raised-button color="accent" (click)="btnUpdateImage()" class="btn__img-change"&ndash;&gt;-->
+<!--&lt;!&ndash;                *ngIf="isParentImagePlanReference">&ndash;&gt;-->
+<!--&lt;!&ndash;          Редактировать&ndash;&gt;-->
+<!--&lt;!&ndash;          <mat-icon class="size-icon">edit</mat-icon>&ndash;&gt;-->
+<!--&lt;!&ndash;        </button>&ndash;&gt;-->
+<!--&lt;!&ndash;      </div>&ndash;&gt;-->
+
+
+
+
+<!--      <div class="model-img">-->
+<!--        <div class="adding-img-model">-->
+<!--          <input [class.active]="isParentImagePlanReference" #input (change)="onFileUpload($event)" type="file">-->
+<!--&lt;!&ndash;          <img *ngIf="isParentImagePlanReference && pdfStr != true" class="img-model"&ndash;&gt;-->
+<!--&lt;!&ndash;               [src]="parent.image_plan_reference" alt="">&ndash;&gt;-->
+<!--&lt;!&ndash;          <div class="pfd-container" *ngIf="isParentImagePlanReference && pdfStr">&ndash;&gt;-->
+
+<!--&lt;!&ndash;            <pdf-viewer [src]="parent.image_plan_reference"&ndash;&gt;-->
+<!--&lt;!&ndash;                        [original-size]="false"&ndash;&gt;-->
+<!--&lt;!&ndash;            ></pdf-viewer>&ndash;&gt;-->
+<!--          <div class="render" #render></div>-->
+<!--&lt;!&ndash;          </div>&ndash;&gt;-->
+<!--        </div>-->
+<!--        <button mat-raised-button color="accent" (click)="btnUpdateImage()" class="btn__img-change"-->
+<!--                *ngIf="isParentImagePlanReference">-->
+<!--          Редактировать-->
+<!--          <mat-icon class="size-icon">edit</mat-icon>-->
+<!--        </button>-->
+<!--      </div>-->
+
+
+
+<!--      <div class="adding-component" *ngIf="parent_equipment_id != 0">-->
+<!--        <div class="adding-component__content">-->
+<!--          <app-setting-component (send)="upgradePart($event)" *ngFor="let part of part"-->
+<!--                                 [part]="part"></app-setting-component>-->
+<!--          <app-adding-component (send)="addingPart($event)"></app-adding-component>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="save">-->
+<!--      <button (click)="saveNewModel()" [disabled]="addingNewModelForm.invalid" mat-raised-button color="accent"-->
+<!--              class="save__btn">Сохранить-->
+<!--      </button>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
