--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/layout/adding-equipment.component.scss
@@ -1,3 +1,179 @@
+//* {
+//  padding: 0;
+//  margin: 0;
+//}
+//
+//.wrapper {
+//  width: 1440px;
+//  margin: 0 auto;
+//  padding-top: 15px;
+//  padding-bottom: 15px;
+//}
+//
+//.head {
+//  display: grid;
+//  grid-template-columns: 33% 33% 33%;
+//  justify-content: center;
+//  align-items: center;
+//}
+//
+//.loading {
+//  top: 150px;
+//  margin: 0 auto;
+//}
+//
+//.btn-back {
+//  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+//  width: 133px;
+//  height: 55px;
+//  display: flex;
+//  justify-content: center;
+//  align-items: center;
+//  border-radius: 5px;
+//
+//  .size-icon {
+//    font-size: 32px;
+//    width: auto;
+//    height: auto;
+//  }
+//}
+//
+//input.active {
+//  display: none;
+//}
+//
+//.container {
+//  display: flex;
+//  justify-content: space-between;
+//  margin-top: 15px;
+//  margin-bottom: 15px;
+//}
+//
+//.adding-img-model {
+//  width: 650px;
+//  height: 850px;
+//  border: 1px solid black;
+//  display: flex;
+//  justify-content: center;
+//  align-items: center;
+//  border-radius: 5px;
+//}
+//
+//.model-img {
+//  height: 900px;
+//  display: flex;
+//  flex-direction: column;
+//  align-items: center;
+//}
+//
+//.btn__img-change {
+//  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+//  margin-top: 10px;
+//  width: 200px;
+//  height: 45px;
+//  display: flex;
+//  justify-content: space-around;
+//  align-items: center;
+//  border-radius: 5px;
+//
+//  .size-icon {
+//    font-size: 32px;
+//    width: auto;
+//    height: auto;
+//  }
+//}
+//
+//.img-model {
+//  border-radius: 5px;
+//  width: 100%;
+//  height: 100%;
+//}
+//
+//.adding-component {
+//  width: 650px;
+//  background-color: rgba(164, 147, 67, 0.5);
+//  border-radius: 5px;
+//  height: 850px;
+//  overflow: auto;
+//}
+//
+//.adding-component__content {
+//  margin-top: 10px;
+//  margin-bottom: 10px;
+//}
+//.head__name {
+//  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+//  background-color: #f5f5f5;
+//  font-size: 32px;
+//  text-align: center;
+//  border-radius: 5px;
+//  margin: 0 auto;
+//  padding: 5px;
+//}
+//
+//.example-full-width {
+//  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+//  width: 460px;
+//  height: 45px;
+//  border-radius: 5px;
+//}
+//
+//.border {
+//  margin-left: 5px;
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+//  border-radius: 5px;
+//  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+//  background-color: #f5f5f5;
+//  cursor: pointer;
+//  width: 45px;
+//  height: 45px;
+//}
+//
+//.head-name {
+//  align-items: center;
+//  display: flex;
+//  justify-self: center;
+//}
+//
+//.save {
+//  padding-top: 10px;
+//  display: flex;
+//  justify-content: center;
+//  padding-bottom: 20px;
+//}
+//
+//.save__btn{
+//  box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+//  width: 230px;
+//  height: 50px;
+//  border: none;
+//  font-size: 16px;
+//  border-radius: 25px;
+//}
+//.pfd-container {
+//  width: 100%;
+//  height: 100%;
+//}
+//
+//pdf-viewer {
+//  width: 100%;
+//  height: 100%;
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+//  filter: drop-shadow(5px 5px 5px #222222);
+//  border-radius: 5px;
+//  border: 1px solid black;
+//}
+//
+//.size-icon {
+//  font-size: 32px;
+//  width: auto;
+//  height: auto;
+//}
+//
 * {
   padding: 0;
   margin: 0;
@@ -47,6 +223,12 @@ input.active {
   justify-content: space-between;
   margin-top: 15px;
   margin-bottom: 15px;
+}
+
+.slider {
+  width: 650px;
+  overflow: auto;
+  display: flex;
 }
 
 .adding-img-model {
@@ -101,6 +283,7 @@ input.active {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 .head__name {
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   background-color: #f5f5f5;
@@ -144,7 +327,7 @@ input.active {
   padding-bottom: 20px;
 }
 
-.save__btn{
+.save__btn {
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   width: 230px;
   height: 50px;
@@ -152,6 +335,7 @@ input.active {
   font-size: 16px;
   border-radius: 25px;
 }
+
 .pfd-container {
   width: 100%;
   height: 100%;
@@ -173,4 +357,14 @@ pdf-viewer {
   width: auto;
   height: auto;
 }
+
+.render {
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
 
